Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="一直在努力" class="anchor" href="#%E4%B8%80%E7%9B%B4%E5%9C%A8%E5%8A%AA%E5%8A%9B" aria-hidden="true"><span class="octicon octicon-link"></span></a>一直在努力</h1>
+<a id="bloggithubio" class="anchor" href="#bloggithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>blog.github.io</h1>
+
+<p>梁小二的博客X</p>
       </section>
     </div>
 
