Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="bloggithubio" class="anchor" href="#bloggithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>blog.github.io</h1>
+<a id="blog" class="anchor" href="#blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>blog</h1>
 
-<p>梁小二的博客X</p>
+<p>梁小二的博客</p>
       </section>
     </div>
 
