Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="blog" class="anchor" href="#blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>blog</h1>
+<a id="每天进步一点点" class="anchor" href="#%E6%AF%8F%E5%A4%A9%E8%BF%9B%E6%AD%A5%E4%B8%80%E7%82%B9%E7%82%B9" aria-hidden="true"><span class="octicon octicon-link"></span></a>每天进步一点点</h1>
 
-<p>梁小二的博客</p>
+<p>梁小二--哈哈</p>
       </section>
     </div>
 
